// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Screen /> > renders with default desktop position and size 1`] = `
.emotion-0 {
  background-color: #000;
  overflow: visible;
  width: 100dvw;
  height: calc(100dvw * 2 / 3);
}

@media only screen and (min-width: 600px) {
  .emotion-0 {
    width: min(
          calc(100dvw - 285px),calc(85dvh * 3 / 2)
        );
    height: 85dvh;
  }
}

@media only screen and (max-height: 450px) and (max-width: 1000px) and (orientation: landscape) {
  .emotion-0 {
    width: calc(100dvh * (3 / 2));
    height: 100dvh;
  }
}

.emotion-0::after {
  content: '';
  position: absolute;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  margin: 2px;
  pointer-events: none;
  border: 2px dashed #1c76fd;
  visibility: hidden;
}

.emotion-2 {
  background-color: #000;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: -moz-crisp-edges;
  image-rendering: -o-crisp-edges;
  width: 100%;
  height: 100%;
  display: block;
  margin: 0 auto;
  max-height: 100%;
  max-width: 100%;
  object-fit: contain;
  image-rendering: pixelated;
}

.emotion-4 {
  position: absolute;
  right: 12px;
  bottom: 12px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  z-index: 3;
  opacity: 0;
  -webkit-animation: emulator-loading-badge-fade-in 120ms ease forwards;
  animation: emulator-loading-badge-fade-in 120ms ease forwards;
  -webkit-animation-delay: 150ms;
  animation-delay: 150ms;
}

<div
  class="emotion-0 emotion-1 react-draggable"
  data-testid="screen-wrapper"
  style="position: absolute; user-select: auto; display: inline-block; top: 0px; left: 0px; cursor: auto; transform: translate(520px,30px); max-width: 9007199254740991px; max-height: 9007199254740991px; box-sizing: border-box; flex-shrink: 0;"
>
  <canvas
    class="emotion-2 emotion-3"
    data-testid="screen-wrapper:render-canvas"
    height="160"
    width="240"
  />
  <div
    aria-label="Emulator loading"
    class="emotion-4 emotion-5"
  >
    <span
      style="display: inherit;"
    >
      <span
        style="display: inline-block; background-color: rgb(28, 118, 253); width: 7px; height: 7px; margin: 3px; border-radius: 100%; animation: react-spinners-BeatLoader-beat 0.7s 0s infinite linear; animation-fill-mode: both;"
      />
      <span
        style="display: inline-block; background-color: rgb(28, 118, 253); width: 7px; height: 7px; margin: 3px; border-radius: 100%; animation: react-spinners-BeatLoader-beat 0.7s 0.35s infinite linear; animation-fill-mode: both;"
      />
      <span
        style="display: inline-block; background-color: rgb(28, 118, 253); width: 7px; height: 7px; margin: 3px; border-radius: 100%; animation: react-spinners-BeatLoader-beat 0.7s 0s infinite linear; animation-fill-mode: both;"
      />
    </span>
  </div>
  <div />
</div>
`;

exports[`<Screen /> > renders with default mobile position and size 1`] = `
.emotion-0 {
  background-color: #000;
  overflow: visible;
  width: 100dvw;
  height: calc(100dvw * 2 / 3);
}

@media only screen and (min-width: 600px) {
  .emotion-0 {
    width: min(
          calc(100dvw - 285px),calc(85dvh * 3 / 2)
        );
    height: 85dvh;
  }
}

@media only screen and (max-height: 450px) and (max-width: 1000px) and (orientation: landscape) {
  .emotion-0 {
    width: calc(100dvh * (3 / 2));
    height: 100dvh;
  }
}

.emotion-0::after {
  content: '';
  position: absolute;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  margin: 2px;
  pointer-events: none;
  border: 2px dashed #1c76fd;
  visibility: hidden;
}

.emotion-2 {
  background-color: #000;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: -moz-crisp-edges;
  image-rendering: -o-crisp-edges;
  width: 100%;
  height: 100%;
  display: block;
  margin: 0 auto;
  max-height: 100%;
  max-width: 100%;
  object-fit: contain;
  image-rendering: pixelated;
}

.emotion-4 {
  position: absolute;
  right: 12px;
  bottom: 12px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  z-index: 3;
  opacity: 0;
  -webkit-animation: emulator-loading-badge-fade-in 120ms ease forwards;
  animation: emulator-loading-badge-fade-in 120ms ease forwards;
  -webkit-animation-delay: 150ms;
  animation-delay: 150ms;
}

<div
  class="emotion-0 emotion-1 react-draggable"
  data-testid="screen-wrapper"
  style="position: absolute; user-select: auto; display: inline-block; top: 0px; left: 0px; cursor: auto; transform: translate(0px,0px); max-width: 9007199254740991px; max-height: 9007199254740991px; box-sizing: border-box; flex-shrink: 0;"
>
  <canvas
    class="emotion-2 emotion-3"
    data-testid="screen-wrapper:render-canvas"
    height="160"
    width="240"
  />
  <div
    aria-label="Emulator loading"
    class="emotion-4 emotion-5"
  >
    <span
      style="display: inherit;"
    >
      <span
        style="display: inline-block; background-color: rgb(28, 118, 253); width: 7px; height: 7px; margin: 3px; border-radius: 100%; animation: react-spinners-BeatLoader-beat 0.7s 0s infinite linear; animation-fill-mode: both;"
      />
      <span
        style="display: inline-block; background-color: rgb(28, 118, 253); width: 7px; height: 7px; margin: 3px; border-radius: 100%; animation: react-spinners-BeatLoader-beat 0.7s 0.35s infinite linear; animation-fill-mode: both;"
      />
      <span
        style="display: inline-block; background-color: rgb(28, 118, 253); width: 7px; height: 7px; margin: 3px; border-radius: 100%; animation: react-spinners-BeatLoader-beat 0.7s 0s infinite linear; animation-fill-mode: both;"
      />
    </span>
  </div>
  <div />
</div>
`;
